# event_modeler

./: .gitignore  .gitmodules  .log4brains.yml  .mcp-workflow.json  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PROCESS.md  LICENSE  PLANNING.md  README.md  ROADMAP.md  build.rs  event-modeling-reference.md  example.eventmodel  flake.nix  generate_step1.sh  minimal.eventmodel  package-lock.json  test.eventmodel  test_minimal.eventmodel
.claude/: settings.local.json
.github/: copilot-instructions.md  pr-description-template-no-gist.md  pr-description-template.md
.github/templates/: landing-page.html
.github/workflows/: ci.yml  claude-issue-handler.yml  claude.yml  diagram-preview.yml  mcp-server-ci.yml  pr-monitoring.yml  release.yml
docs/: github-project-setup.md  gold-master-testing.md  mcp-todo-management.md  node-based-layout-plan.md  phase5-progress-summary.md  yaml-syntax-guide.md
docs/adr/: 20250617-performance-non-priority.md  20250617-type-driven-testing.md  20250617-typestate-parser-design.md  20250618-gold-master-testing.md  20250618-node-based-layout.md  20250618-yaml-format-adoption.md  20250619-continue-custom-svg-layout.md  20250619-custom-layout-implementation.md  20250622-github-issues-workflow.md  20250622-mcp-over-github-integration.md  README.md  index.md
docs/decisions/: 20250618-schema-versioning-strategy.md
examples/: all_entity_types.eventmodel  complex_order_system.eventmodel  complex_supported.eventmodel  minimal_system.eventmodel  no_connectors.eventmodel  yaml_error_handling.rs
mcp-workflow-server/: .eslintrc.json  .gitignore  .mcp-workflow.json  README.md  package-lock.json  package.json  tsconfig.json
scripts/: preview-diagram.sh  visual_compare.sh
src/: cli.rs  lib.rs  main.rs  type_safety.rs
tests/: .yaml_acceptance.rs.pending-snap  e2e.rs  test_routing_integration.rs  yaml_acceptance.rs
(+122 files in other folders)
