[package]
name = "event_modeler"
version = "0.2.0"
edition = "2024"
authors = ["John Wilger"]
description = "A type-safe Event Modeling diagram generator"
documentation = "https://docs.rs/event_modeler"
repository = "https://github.com/jwilger/event_modeler"
license = "MIT"
keywords = ["event-modeling", "diagram", "visualization", "ddd", "event-sourcing"]
categories = ["visualization", "development-tools"]

[dependencies]
thiserror = "1"
nutype = { version = "0.4", features = ["serde", "regex"] }
regex = "1"
lazy_static = "1"

[dev-dependencies]
insta = { version = "1.34", features = ["yaml", "glob"] }

[lints.rust]
warnings = "deny"

# Documentation settings
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "event_modeler"
path = "src/main.rs"
