[package]
name = "event_modeler"
version = "0.3.0"
edition = "2024"
authors = ["John Wilger"]
description = "A type-safe Event Modeling diagram generator"
documentation = "https://docs.rs/event_modeler"
repository = "https://github.com/jwilger/event_modeler"
license = "MIT"
keywords = ["event-modeling", "diagram", "visualization", "ddd", "event-sourcing"]
categories = ["visualization", "development-tools"]
default-run = "event_modeler"

[dependencies]
thiserror = "1"
nutype = { version = "0.4", features = ["serde", "regex"] }
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
insta = { version = "1.34", features = ["yaml", "glob"] }

[features]
default = ["mock-router"]
mock-router = []

[lints.rust]
warnings = "deny"

# Documentation settings
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "event_modeler"
path = "src/main.rs"
